src/ui/sonarr_ui/root_folders/snapshots/managarr__ui__sonarr_ui__root_folders__root_folders_ui_tests__tests__snapshot_tests__DeleteRootFolderPrompt.snap
---
source: src/ui/sonarr_ui/root_folders/root_folders_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Path                                                                                            Free Space                        Unmapped Folders                
=> /nfs                                                                                            204800.00 GB                      0                               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭──────────────────  Delete Root Folder  ───────────────────╮                                                     
                                                   │      Do you really want to delete this root folder:       │                                                     
                                                   │                           /nfs?                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
