src/ui/sonarr_ui/root_folders/snapshots/managarr__ui__sonarr_ui__root_folders__root_folders_ui_tests__tests__snapshot_tests__root_folders_ui_renders_empty_root_folders.snap
---
source: src/ui/sonarr_ui/root_folders/root_folders_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
